--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.5.3",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
